--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Page Title</title>
+<img src="images/headerpic.jpg" alt="toplogo" width="500" height="333">
 </head>
 <body>
 
